Revise service provider messaging in index.html

--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
             <div class="stream-row">
               <div class="stream-label">Service Providers</div>
               <div class="stream-text">
-                <strong>Systems Growth = More Opportunity for You.</strong> When a city turns on BRYCER, they uncover previously untracked systems that now must be tested and maintained. For service providers, that visibility creates new, qualified opportunity inside markets you already serve — more systems eligible for inspections, more chances to deepen existing relationships, and more recurring work tied to required testing.
+                <strong>Systems Growth = More Opportunity.</strong> Visibility uncovers previously untracked systems that now require testing — expanding opportunity inside cities you already serve.
               </div>
             </div>
             <div class="stream-row">
@@ -459,7 +459,7 @@
             <div class="stream-row">
               <div class="stream-label">Service Providers</div>
               <div class="stream-text">
-                <strong>Notifications Create Predictable Demand.</strong> When BRYCER sends automated notifications to property owners, those premises are required to get systems tested on a regular cadence. That shift creates steadier, more predictable inspection demand — fewer “fire drills” and more scheduled work your team can plan around.
+                <strong>Notifications Drive Steady Demand.</strong> Premise notifications increase required testing and create predictable inspection cycles.
               </div>
             </div>
             <div class="stream-row">
@@ -505,7 +505,7 @@
             <div class="stream-row">
               <div class="stream-label">Service Providers</div>
               <div class="stream-text">
-                <strong>Integrations & Past-Due Tracking Make Reporting Easier.</strong> BRYCER simplifies your workflow with easier report uploads, integrations that reduce double entry, and clear visibility into past-due systems. That means less time chasing paperwork and more time actually doing inspections.
+                <strong>Simpler Uploads + Past-Due Tracking.</strong> Integrations and workflow improvements reduce admin time and help providers stay ahead.
               </div>
             </div>
             <div class="stream-row">
@@ -582,7 +582,7 @@
             <div class="stream-row">
               <div class="stream-label">Service Providers</div>
               <div class="stream-text">
-                <strong>Your Reports Raise Citywide Compliance.</strong> When your team submits accurate, timely reports through BRYCER, those reports convert directly into higher compliance rates across the community. BRYCER makes that work visible — reinforcing that your inspections don’t just close jobs; they improve safety outcomes and help cities hit their compliance goals.
+                <strong>Your Reports Improve Community Compliance.</strong> Clean, timely reporting directly lifts compliance outcomes across the city.
               </div>
             </div>
             <div class="stream-row">
@@ -659,7 +659,7 @@
             <div class="stream-row">
               <div class="stream-label">Service Providers</div>
               <div class="stream-text">
-                <strong>Modern Tools That Support Service Providers.</strong> Modernizing a city’s compliance program isn’t only about the AHJ. Service providers benefit from standardized submission requirements, fewer rejected reports, better visibility into workloads, and tools that help you stay aligned with enforcement cycles. Modernization becomes a competitive edge when you’re bidding and renewing contracts.
+                <strong>Modern Tools = Fewer Rejections.</strong> Clearer requirements and standardized submissions make reporting smoother and more efficient.
               </div>
             </div>
             <div class="stream-row">
@@ -705,7 +705,7 @@
             <div class="stream-row">
               <div class="stream-label">Service Providers</div>
               <div class="stream-text">
-                <strong>Year-End Service Provider Wrap-Up.</strong> Close the year by highlighting how working in BRYCER delivered clearer requirements, more predictable demand, and smoother submission workflows. Thank providers for being part of the ecosystem and preview how next year’s Visibility → Efficiency → Compliance → Modernization themes will create even more opportunity.
+                <strong>Year-End Wrap-Up & What’s Next.</strong> Highlight improvements, reinforce value, and preview next year’s opportunities.
               </div>
             </div>
             <div class="stream-row">
@@ -736,8 +736,9 @@
 
     <footer>
       <div><strong>Backed by BRYCER.</strong> Turning Reports into Results.</div>
-      <div></div>
+      <div>Thank you for building this calendar around one problem – lack of compliance.</div>
     </footer>
   </div>
 </body>
 </html>
+
