Remove thank you message from footer
Removed the thank you message from the footer.

--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@
 
     <footer>
       <div><strong>Backed by BRYCER.</strong> Turning Reports into Results.</div>
-      <div>Thank you for building this calendar around one problem – lack of compliance.</div>
+      <div></div>
     </footer>
   </div>
 </body>
